# jetson-sample

./: README.md
app/: .gitignore  get_hosts.py  pyproject.toml
app/src/: app.py  injest.py
docs/: install_ansible.md  setup_jetson.md
infra/playbooks/: echo_hello.yml
infratool/: .gitignore  Makefile  README.md  collect.yml  pyproject.toml  show_facts.sh  site.yml
infratool/inventry/: hosts.development.yml  hosts.production.yml
infratool/playbooks/: delivery_resources.yml  echo_hello.yml  get_spec.yml  install_python.yml  make_device_query.yml
infratool/roles/common/tasks/: main.yml
infratool/roles/nfs-client/tasks/: main.yml
infratool/roles/nfs-server/handlers/: main.yml
infratool/roles/nfs-server/tasks/: main.yml
