[tool.poetry]
name = "infratool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.8"
python = ">=3.9,<4.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlmodel = "^0.0.8"
ansible = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
